[gd_scene load_steps=5 format=3 uid="uid://ceqf0sud2bgtn"]

[ext_resource type="Script" path="res://Scenes/sr/sr_input_column.gd" id="1_20kso"]
[ext_resource type="PackedScene" uid="uid://b6nwlb7e1yvvc" path="res://Scenes/Character Planner Menu/expanded_int_input.tscn" id="2_pnd7q"]
[ext_resource type="PackedScene" uid="uid://cj1g1mdugi5k0" path="res://Scenes/Character Planner Menu/simple_int_input.tscn" id="3_b5nwk"]
[ext_resource type="PackedScene" uid="uid://pl3mrqe03nvi" path="res://Scenes/Character Planner Menu/check_box_input.tscn" id="4_n5cvp"]

[node name="SrInputColumn" type="VBoxContainer"]
offset_right = 174.0
offset_bottom = 574.0
script = ExtResource("1_20kso")

[node name="CharacterLevel" parent="." instance=ExtResource("2_pnd7q")]
unique_name_in_owner = true
layout_mode = 2
max = 80
Cycles = Array[int]([1, 20, 30, 40, 50, 60, 70, 75, 80])

[node name="BasicAttackLevel" parent="." instance=ExtResource("3_b5nwk")]
unique_name_in_owner = true
layout_mode = 2
max = 6

[node name="SkillLevel" parent="." instance=ExtResource("3_b5nwk")]
unique_name_in_owner = true
layout_mode = 2
max = 12

[node name="UltimateLevel" parent="." instance=ExtResource("3_b5nwk")]
unique_name_in_owner = true
layout_mode = 2
max = 12

[node name="TalentLevel" parent="." instance=ExtResource("3_b5nwk")]
unique_name_in_owner = true
layout_mode = 2
max = 12

[node name="Spacer" type="Control" parent="."]
layout_mode = 2

[node name="PassiveTrace1" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="PassiveTrace2" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="PassiveTrace3" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace1" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace2" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace3" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace4" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace5" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace6" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace7" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace8" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace9" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatTrace10" parent="." instance=ExtResource("4_n5cvp")]
unique_name_in_owner = true
layout_mode = 2
